git_config: use fqcn, force chdir - possibly related to https://github.blog/2022-04-12-git-security-vulnerability-announced/

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -234,11 +234,13 @@
   when: misp_webserver is not defined or misp_webserver == 'apache2'
 
 - name: setting core.filemode for git
-  git_config:
+  community.general.git_config:
     name: core.filemode
     value: 'false'
     scope: local
     repo: "{{ misp_rootdir }}"
+  args:
+    chdir: "{{ misp_rootdir }}"
 
 - import_tasks: stix-cybox.yml
 
